# urbanopt

./: .gitignore  404.html  LICENSE  README.md  TODO.md  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  pyproject_old.toml
api_reference/: index.html
blp/: index.html
docs/: api_reference.md  blp.md  examples.md  guide.md  index.md
examples/: Untitled.ipynb  index.html  simple.ipynb  simple_model.lp  toronto_optimization.ipynb  toronto_pathways.ipynb
guide/: index.html
tests/: conftest.py  core_test.py  test_core.py  test_polygraph.py
tests/test_core/: test_constraints.py  test_initialization.py  test_objective.py  test_save_load.py  test_solving.py  test_utils.py
tests/test_polygraph/: test_polygraph.py
tutorials/: index.html
urbanopt/: __init__.py  core.py  polygraph.py
