[project]
name = "urbanopt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.2",
    "gurobipy>=13.0.1",
    "pyarrow>=23.0.0",
    "pydantic>=2.12.5",
    "scipy>=1.17.0",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.2",
    "pytest>=9.0.2",
]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "archive*",
    ".archive" 
]

[tool.ruff.lint]
pydocstyle.convention = "google"
select = [
    "ALL", # include all the rules, including new ones
]

ignore = [ 
    "S101",     # 'assert' keyword
    "E501",     # Docstring line too long
    "ANN202",   # Return type for private function
    "UP035",    # Callable from collections.abc
    "T201",     # Print statements
    "FBT001",   # Boolean arguments
    "FBT002",   # Boolean argumentsW
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic values in comparisons
    "RET505",   # Unecessary else after returns 
    "RET506",   # Unecessary else
    "FIX004",   # Line contains hack
    ]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ANN201", "PT", "SLF001"] # Docstrings etc.
"download.py" = ["T201"] # Print statementsW

